# aeds-1

./: 01.cpp  02.cpp  04.cpp  06.cpp  08.cpp  10.cpp  12.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  22.cpp  24.cpp  26.cpp  28.cpp  29.cpp  30.cpp  32.cpp  33.cpp  34.cpp  35.cpp
Lista01/: 02.cpp  03.cpp  06.cpp  07.cpp  13.cpp  18.cpp  21.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  31.cpp  32.cpp  34.cpp  35.cpp
Lista02/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10  10.cpp  11.cpp  6  8
TrabalhoPratico/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  teste
TrabalhoPratico/include/: SDL2
TrabalhoPratico/lib/SDL2/pkgconfig/: sdl2.pc
TrabalhoPratico/lib/SDL2_image/cmake/SDL2_image/: sdl2_image-config.cmake
TrabalhoPratico/src/: generateMatrix.cpp  generateMatrix.h  geraGrafico.cpp  geraGrafico.h  segregacao.cpp  segregacao.h  segregation.cpp  segregation.h
src/: 05  05.cpp  07  09  09.cpp  11
